# tp_courbure

./: .gitignore  CMakeLists.txt  README  salut.cpp
src/lib/3d/: mat2.cpp  mat2.hpp  vec2.cpp
src/lib/common/: backtrace.cpp  backtrace.hpp  file_tools.cpp  file_tools.hpp  math_base.hpp
src/lib/interface/: application_qt.cpp  navigator_tool.cpp  trackball.cpp
src/lib/mesh/: mesh.cpp  mesh.hpp  mesh_basic.cpp  mesh_basic.hpp  mesh_parametric.cpp  mesh_parametric.hpp
src/lib/mesh/format/: mesh_io_obj.cpp
src/lib/opengl/: axes_helper.hpp  glutils.cpp  glutils.hpp  line_opengl.hpp  mesh_opengl.hpp
src/local/interface/: myWidgetGL.cpp  myWidgetGL.hpp
src/local/scene/: scene.cpp  scene.hpp
